--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 </ul>
                 <ul class="list project-list">
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port1.jpg" alt="презентация сайта" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Технокряк</h2>
@@ -63,7 +63,7 @@
                         </a>   
                     </li>
                     <li class="project-poster"> 
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port2.jpg" alt="презентация постера" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Постер <span lang="en-GB">New Orlean vs Golden Star</span></h2>
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port3.jpg" alt="логотип ресторана" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Ресторан <span lang="en-GB">Seafood</span></h2>
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="project-poster"> 
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port4.jpg" alt="наушники" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Проект <span lang="en-GB">Prime</span></h2>
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                            <img src="./images/portfolio/port5.jpg" alt="две коробки" width="370" height="294">
                            <div class="poster-bottom">
                                <h2 class="project-title">Проект <span lang="en-GB">Boxes</span></h2>
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="project-poster"> 
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port6.jpg" alt="презентация сайта" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title" lang="en-GB">Inspiration has no Borders</h2>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port7.jpg" alt="разворот книги" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Издание <span lang="en-GB">Limited Edition</span></h2>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port8.jpg" alt="бирка" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title">Проект <span lang="en-GB">LAB</span></h2>
@@ -126,7 +126,7 @@
                         </a>                   
                     </li>
                     <li class="project-poster">
-                        <a href="" class="link">
+                        <a href="" class="link poster">
                             <img src="./images/portfolio/port9.jpg" alt="человек работает на ноутбуке" width="370" height="294">
                             <div class="poster-bottom">
                                 <h2 class="project-title" lang="en-GB">Growing Business</h2>
