--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </nav>
             <ul class="list contact-header">
                 <li class="item">
-                    <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="item">
-                    <a class="contact link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contact link tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -42,19 +42,19 @@
             <div class="container">
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="list list-section">
-                    <li class="list-section-item">
+                    <li class="list-section-item antenna">
                       <h3 class="section-title">Внимание к деталям</h3>
                       <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="list-section-item">
+                    <li class="list-section-item clock">
                       <h3 class="section-title">Пунктуальность</h3>
                       <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="list-section-item">
+                    <li class="list-section-item diagram">
                       <h3 class="section-title">Планирование</h3>
                       <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="list-section-item">
+                    <li class="list-section-item astronaut">
                       <h3 class="section-title">Современные технологии</h3>
                       <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
