спрайт, иконки шапка

--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
                 <ul class="nav-page list">
                     <li class="item"><a href="./index.html" class="link current" target="_self">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link" target="_self">Портфолио</a></li>
-                    <li class="item"><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="./pol.html" class="link" target="_self">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="list contact-header">
                 <li class="item">
-                    <a class="contact link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact link mail" href="mailto:info@devstudio.com">
+                        <svg class="header-icon" width="16" height="12">
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                        </svg> 
+                        info@devstudio.com</a>
                 </li>
                 <li class="item">
-                    <a class="contact link tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contact link tel" href="tel:+380961111111">
+                        <svg class="header-icon" width="10" height="16">
+                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -88,20 +96,7 @@
                         <div class="team-photo-txt">
                             <h3 class="foto-title">Игорь Демьяненко</h3>
                             <p class="team-text" lang="en-GB">Product Designer</p>
-                            <ul class="list social-links">
-                                <li>
-                                    <a href="http://" class="link"></a>
-                                </li>
-                                <li>
-                                    <a href="http://" class="link"></a>
-                                </li>
-                                <li>
-                                    <a href="http://" class="link"></a>
-                                </li>
-                                <li>
-                                    <a href="http://" class="link"></a>
-                                </li>
-                            </ul>
+                           
                         </div>
                     </li>
                     <li class="team-foto" >
