иконки в секции особенности

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="nav-page list">
                     <li class="item"><a href="./index.html" class="link current" target="_self">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link" target="_self">Портфолио</a></li>
-                    <li class="item"><a href="./pol.html" class="link" target="_self">Контакты</a></li>
+                    <li class="item"><a href="" class="link" target="_self">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="list contact-header">
@@ -51,18 +51,38 @@
                 <h2 class="visually-hidden">Особенности</h2>
                 <ul class="list list-section">
                     <li class="list-section-item antenna">
+                      <div class="section-picture">
+                          <svg class="section-icon" width="70" height="70">
+                              <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                          </svg>
+                      </div>
                       <h3 class="section-title">Внимание к деталям</h3>
                       <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="list-section-item clock">
+                        <div class="section-picture">
+                            <svg class="section-icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                       <h3 class="section-title">Пунктуальность</h3>
                       <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="list-section-item diagram">
+                        <div class="section-picture">
+                            <svg class="section-icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                       <h3 class="section-title">Планирование</h3>
                       <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="list-section-item astronaut">
+                        <div class="section-picture">
+                            <svg class="section-icon" width="70" height="70">
+                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                       <h3 class="section-title">Современные технологии</h3>
                       <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
