секция постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -150,22 +150,46 @@
                 <h2 class="clients-title">Постоянные клиенты</h2>
                 <ul class="list clients-list">
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client1"
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client2"
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client3"
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client4"
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client5"
+                            </svg>
+                        </a>
                     </li>
                     <li class="client-logo">
-                        <a href="" class="link" ></a>
+                        <a href="" class="link client" >
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/symbol-defs.svg#icon-client6"
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
