--- a/index.html
+++ b/index.html
@@ -116,7 +116,36 @@
                         <div class="team-photo-txt">
                             <h3 class="foto-title">Игорь Демьяненко</h3>
                             <p class="team-text" lang="en-GB">Product Designer</p>
-                           
+                            <ul class="team-contact list">
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-foto" >
@@ -124,6 +153,36 @@
                         <div class="team-photo-txt">
                             <h3 class="foto-title">Ольга Репина</h3>
                             <p class="team-text" lang="en-GB">Frontend Developer</p>
+                            <ul class="team-contact list">
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-foto" >
@@ -131,6 +190,36 @@
                         <div class="team-photo-txt">
                             <h3 class="foto-title" >Николай Тарасов</h3>
                             <p class="team-text" lang="en-GB">Marketing</p>
+                            <ul class="team-contact list">
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-foto">
@@ -138,6 +227,36 @@
                         <div class="team-photo-txt">
                             <h3 class="foto-title" >Михаил Ермаков</h3>
                             <p class="team-text" lang="en-GB">UI Designer</p>
+                            <ul class="team-contact list">
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-contact-item">
+                                    <a href="" class="link social-team">
+                                        <svg class="icon-social" width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -152,42 +271,42 @@
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client1"
+                                <use href="./images/symbol-defs.svg#icon-client1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client2"
+                                <use href="./images/symbol-defs.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client3"
+                                <use href="./images/symbol-defs.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client4"
+                                <use href="./images/symbol-defs.svg#icon-client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client5"
+                                <use href="./images/symbol-defs.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-logo">
                         <a href="" class="link client" >
                             <svg class="client-icon" width="106" height="60">
-                                <use href="./images/symbol-defs.svg#icon-client6"
+                                <use href="./images/symbol-defs.svg#icon-client6"></use>
                             </svg>
                         </a>
                     </li>
@@ -208,14 +327,38 @@
                     </ul>
                 </address>
            </div>
-           <div class="social">
+           <div class="footer-social">
                <p class="social-text">Присоединяйтесь</p>
-               <ul class="list social-list">
-                   <li></li>
-                   <li></li>
-                   <li></li>
-                   <li></li>
-               </ul>
+               <ul class="list footer-list-social">
+                <li class="footer-social-item">
+                    <a href="" class="link social-footer-link">
+                        <svg class="icon-social-footer" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-instagram1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="" class="link social-footer-link">
+                        <svg class="icon-social-footer" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-twitter1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="" class="link social-footer-link">
+                        <svg class="icon-social-footer" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-facebook1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-item">
+                    <a href="" class="link social-footer-link">
+                        <svg class="icon-social-footer" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-linkedin1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
                
             </div>
         </div>
